improve image formating and ensure consistent spacing between elements; small changes to incorporate IEEE formatting/style

--- a/css/solarized-dark.css
+++ b/css/solarized-dark.css
@@ -405,3 +405,9 @@ th {
   color: #d33682;
   text-align: center;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
